--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -59,8 +59,10 @@
     "cbf_params": {
         "d_min": 2.0,
         "d_max": 8.0,
-        "slack_mode": true,
-        "slack_cost": 100000,
+        "cbf_horizon": 2,
+        "impc_iter": 2,
+        "slack_mode": false,
+        "slack_cost": 50000,
         "slack_decay_rate": 0.1
     },
     "bezier_params": {
