--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -5,7 +5,7 @@
         "k_hor": 16,
         "mpc_tuning": {
             "w_pos_err": 10,
-            "w_u_eff": 1,
+            "w_u_eff": 20,
             "spd_f": 8
         }
     },
@@ -58,10 +58,10 @@
     },
     "cbf_params": {
         "d_min": 2.0,
-        "d_max": 8.0,
+        "d_max": 4.0,
         "cbf_horizon": 2,
         "impc_iter": 2,
-        "slack_mode": false,
+        "slack_mode": true,
         "slack_cost": 50000,
         "slack_decay_rate": 0.1
     },
