--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -6,7 +6,7 @@
         "mpc_tuning": {
             "w_pos_err": 10,
             "w_u_eff": 10,
-            "spd_f": 8
+            "spd_f": 16
         }
     },
     "physical_limits": {
@@ -64,13 +64,13 @@
         "slack_config": {
             "safety_slack": true,
             "clf_slack": true,
-            "connectivity_slack": false,
+            "connectivity_slack": true,
             "safety_slack_cost": 100000,
-            "clf_slack_cost": 50000,
+            "clf_slack_cost": 500,
             "connectivity_slack_cost": 25000,
             "slack_decay_rate": 0.1
         },
-        "slack_mode": false,
+        "slack_mode": true,
         "slack_cost": 50000,
         "slack_decay_rate": 0.1
     },
