--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -11,12 +11,12 @@
     },
     "physical_limits": {
         "p_min": [
-            -5,
-            -5
+            -10,
+            -10
         ],
         "p_max": [
-            5,
-            5
+            10,
+            10
         ],
         "v_min": [
             -2,
@@ -31,12 +31,12 @@
         "a_min": [
             -5.0,
             -5.0,
-            -3.141592653589793
+            -5.0
         ],
         "a_max": [
             5.0,
             5.0,
-            3.141592653589793
+            5.0
         ],
         "pos_std": 0.001,
         "vel_std": 0.01
@@ -57,11 +57,11 @@
         }
     },
     "cbf_params": {
-        "d_min": 2.0,
-        "d_max": 4.0,
+        "d_min": 0.8,
+        "d_max": 3.0,
         "cbf_horizon": 2,
         "impc_iter": 2,
-        "slack_mode": false,
+        "slack_mode": true,
         "slack_cost": 50000,
         "slack_decay_rate": 0.1
     },
