--- a/workspace/experiments/config/base_config.json
+++ b/workspace/experiments/config/base_config.json
@@ -61,7 +61,7 @@
         "d_max": 4.0,
         "cbf_horizon": 2,
         "impc_iter": 2,
-        "slack_mode": false,
+        "slack_mode": true,
         "slack_cost": 50000,
         "slack_decay_rate": 0.1
     },
